[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/combiners/Celestial.gd" type="Script" id=1]
[ext_resource path="res://assets/PrototypeAssets/celest_wheel.png" type="Texture" id=2]
[ext_resource path="res://assets/PrototypeAssets/celest_hand.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/dpcomic-crowned.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 5.48865

[sub_resource type="CircleShape2D" id=4]
radius = 25.0

[sub_resource type="CircleShape2D" id=5]
radius = 25.0

[sub_resource type="CircleShape2D" id=6]
radius = 25.0

[sub_resource type="CircleShape2D" id=7]
radius = 25.0

[sub_resource type="CircleShape2D" id=8]
radius = 25.0

[sub_resource type="CircleShape2D" id=9]
radius = 25.0

[sub_resource type="CircleShape2D" id=10]
radius = 25.0

[sub_resource type="CircleShape2D" id=11]
radius = 25.0

[sub_resource type="CircleShape2D" id=12]
radius = 25.0

[sub_resource type="CircleShape2D" id=13]
radius = 25.0

[sub_resource type="CircleShape2D" id=14]
radius = 25.0

[sub_resource type="CircleShape2D" id=15]
radius = 25.0

[node name="Celestial" type="Area2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.5866
margin_top = -228.657
margin_right = 27.4134
margin_bottom = -192.657
custom_fonts/font = SubResource( 2 )
text = "cut!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wheel" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Arm" type="TextureRect" parent="Wheel"]
margin_left = -20.3627
margin_top = -167.788
margin_right = 19.6373
margin_bottom = 0.211517
texture = ExtResource( 3 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitArea" type="Area2D" parent="Wheel/Arm"]
position = Vector2( 20, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/Arm/HitArea"]
shape = SubResource( 3 )

[node name="_1_" type="Area2D" parent="Wheel"]
position = Vector2( 33, -125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_1_"]
shape = SubResource( 4 )

[node name="_2_" type="Area2D" parent="Wheel"]
position = Vector2( 90, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_2_"]
shape = SubResource( 5 )

[node name="_3_" type="Area2D" parent="Wheel"]
position = Vector2( 120, -33 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="Wheel/_3_"]
shape = SubResource( 6 )

[node name="_4_" type="Area2D" parent="Wheel"]
position = Vector2( 120, 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_4_"]
shape = SubResource( 7 )

[node name="_5_" type="Area2D" parent="Wheel"]
position = Vector2( 90, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_5_"]
shape = SubResource( 8 )

[node name="_6_" type="Area2D" parent="Wheel"]
position = Vector2( 33, 125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_6_"]
shape = SubResource( 9 )

[node name="_7_" type="Area2D" parent="Wheel"]
position = Vector2( -33, 125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_7_"]
shape = SubResource( 10 )

[node name="_8_" type="Area2D" parent="Wheel"]
position = Vector2( -90, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_8_"]
shape = SubResource( 11 )

[node name="_9_" type="Area2D" parent="Wheel"]
position = Vector2( -120, 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_9_"]
shape = SubResource( 12 )

[node name="_10_" type="Area2D" parent="Wheel"]
position = Vector2( -120, -33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_10_"]
shape = SubResource( 13 )

[node name="_11_" type="Area2D" parent="Wheel"]
position = Vector2( -90, -90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_11_"]
shape = SubResource( 14 )

[node name="_12_" type="Area2D" parent="Wheel"]
position = Vector2( -33, -125 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wheel/_12_"]
shape = SubResource( 15 )
[connection signal="area_shape_entered" from="Wheel/_1_" to="." method="_on__1__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_2_" to="." method="_on__2__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_3_" to="." method="_on__3__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_4_" to="." method="_on__4__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_5_" to="." method="_on__5__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_6_" to="." method="_on__6__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_7_" to="." method="_on__7__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_8_" to="." method="_on__8__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_9_" to="." method="_on__9__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_10_" to="." method="_on__10__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_11_" to="." method="_on__11__area_shape_entered"]
[connection signal="area_shape_entered" from="Wheel/_12_" to="." method="_on__12__area_shape_entered"]
